# tuibar-but-rust

./: Cargo.toml
scripts/: launch_jlessbar.sh
src/: app.rs  config.rs  hyprland.rs  hyprland_ipc.rs  main.rs  module_manager.rs  modules.rs  styles.rs  system.rs  ui.rs
src/modules/: battery.rs  clock.rs  cpu.rs  interweb.rs  memory.rs  mod.rs  window.rs  workspaces.rs
