[package]
name = "tui-statusbar"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ansi-to-tui = "4.0"
serde_json = "1.0"
crossterm = "0.27"
ratatui = "0.26"
sysinfo = "0.30"
battery = "0.7"
chrono = "0.4"
